# karu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  fix.sh  patch.diff  patch_hashmap.sh  test_main_bench.mjs  test_nodejs.mjs  update_tests.py
.github/workflows/: benchmarks.yml  deploy-playground.yml  fuzz.yml  nightly-release.yml  validate-wasm.yml
assets/: karu-hero-1280px-640px.ai
bindings/go/: go.mod  karu.go  karu_test.go
bindings/swift/: LICENSE  Package.swift
bindings/swift/Sources/CKaru/: module.modulemap
bindings/swift/Sources/Karu/: Karu.swift
bindings/swift/Tests/KaruTests/: KaruTests.swift
crates/karu/: .gitignore  BENCHMARKS.md  CEDAR-SUPPORT-TRACKING.md  Cargo.toml  KARU.md  KNOWN-CEDAR-LIMITATIONS.md  MISC-TODO.md  POLICY-FORMAT-SUPPORT.md  README.md  ROADMAP.md  build.rs  cbindgen.toml
crates/karu-cli/: Cargo.toml  README.md
crates/karu-cli/src/: main.rs
crates/karu-lsp/: Cargo.toml  README.md
crates/karu-lsp/src/: main.rs
crates/karu/benches/: evaluation.rs  lint_bench.rs  parser_compare.rs
crates/karu/benches/advanced-benchmark/: Cargo.toml  README.md  build.sh
crates/karu/benches/advanced-benchmark/benches/: compare.rs  scale.rs
crates/karu/benches/advanced-benchmark/cedar-wasm-harness/: Cargo.toml
crates/karu/benches/advanced-benchmark/cedar-wasm-harness/src/: lib.rs
crates/karu/benches/advanced-benchmark/karu-wasm-harness/: Cargo.toml
crates/karu/benches/advanced-benchmark/karu-wasm-harness/src/: lib.rs
crates/karu/benches/advanced-benchmark/src/: lib.rs
crates/karu/benches/wasm_bench/: bench_cedar.mjs  bench_node.mjs  index.html  package-lock.json  package.json  vite.config.js
crates/karu/benches/wasm_bench/src/: cedar-bench.js  karu-bench.js  main.js  policies.js
crates/karu/client-docs/: POLICY-OPTIONS-RESPONSE.md  POLICY-OPTIONS.md
crates/karu/docs/: cedar-comparison.md
crates/karu/editors/vscode/: README.md  build-vsix.js  extension.js  karu-icon-theme.json  package-lock.json  package.json
crates/karu/editors/vscode/syntaxes/: cedar.tmLanguage.json  karu.tmLanguage.json
crates/karu/examples/: cedar-schema-grammar.txt  test.cedar  test.json  test.karu  typed.karu  use-schema.md
crates/karu/examples/cedar-examples/: github_example.cedar
crates/karu/fuzz/: Cargo.toml
crates/karu/fuzz/fuzz_targets/: fuzz_cedar_import.rs  fuzz_cedar_roundtrip.rs  fuzz_compile.rs  fuzz_differential.rs  fuzz_eval.rs  fuzz_eval_semantic.rs  fuzz_indexed_equiv.rs  fuzz_inline_tests.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_structured.rs  fuzz_transpile.rs
crates/karu/oso-polar-reference/: abac.md  fga.md  field-level.md  overview.md  policy-preview.md  rbac.md  rebac.md
crates/karu/playground/: app.js  index.html
crates/karu/proompts/: ADV-BENCH-COOK-EM.md
crates/karu/proompts/tmp/adv-bench-cook-em/: after.results  baseline.results  potential-optimisation-target.md  scale_full_after2.results  scale_karu_delete_16_after3.results  scale_read_after1.results
crates/karu/src/: ast.rs  bindings.rs  cedar_grammar.rs  cedar_import.rs  cedar_parser.rs  cedar_schema_grammar.rs  cedar_schema_parser.rs  cedar_schema_parser.rs.patch  compiler.rs  diff.rs  format.rs  grammar.rs  lexer.rs  lib.rs  lint.rs  lsp.rs  lsp_core.rs  matcher.rs  parser.rs  path.rs  path.rs.orig  pattern.rs  resolver.rs  rule.rs  rule.rs.orig  schema.rs  simulate.rs  transpile.rs  type_registry.rs  type_registry.rs.orig  wasm.rs
crates/karu/tests/: cedar_equivalents.rs  cedar_roundtrip.rs  comment_test.rs  lsp_snapshot_tests.rs  security_audit.rs  textmate_string_generation.rs  wasm_tests.rs
crates/karu/tests/lsp_fixtures/: err_bad_syntax.diagnostics.json  err_bad_syntax.karu  err_expect_unknown_rule.diagnostics.json  err_expect_unknown_rule.karu  err_missing_semicolon.diagnostics.json  err_missing_semicolon.karu  err_schema_bad_entity.diagnostics.json  err_schema_bad_entity.karu  err_unterminated_string.diagnostics.json  err_unterminated_string.karu  fmt_messy.formatted.karu  fmt_messy.karu  schema_abstract_trait.karu  schema_basic.karu  schema_empty_mod.karu  schema_field_access_invalid.diagnostics.json  schema_field_access_invalid.karu  schema_field_access_valid.karu  schema_full_namespace.karu  schema_kind_mismatch.diagnostics.json  schema_kind_mismatch.karu  schema_type_mismatch.diagnostics.json  schema_type_mismatch.karu  schema_type_valid.karu  schema_with_assert.karu  schema_with_assert.symbols.json  schema_with_tests.karu  schema_with_tests.symbols.json  valid_complex.karu  valid_complex.symbols.json  valid_expect_block.karu  valid_multiline.karu  valid_simple.karu  valid_with_tests.karu  valid_with_tests.symbols.json
docs/: BENCHMARKS.md  CEDAR-COMPARISON.md  CEDAR-SUPPORT-TRACKING.md  INTERNALS.md  KARU.md  KNOWN-CEDAR-LIMITATIONS.md  MODELING-ABAC.md  MODELING-RBAC.md  MODELING-REBAC.md  ROADMAP.md  SECURITY-AUDIT.md  cedar-comparison.md  modeling-abac.md  modeling-rbac.md  modeling-rebac.md
editors/vscode/: README.md  build-vsix.js  cedar-language-configuration.json  extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: cedar.tmLanguage.json  karu.tmLanguage.json
npm/karu/: README.md  package.json
playground/: .gitignore  app.js  index.html  package-lock.json  package.json  style.css  vite.config.ts
playground/public/: manifest.json
playground/src/: examples.ts  index.css  karu-editor.ts  karu-engine.ts  karu-lang.ts  karu-playground.ts
scripts/: build-android.sh
scripts/benchmarks/: compare.py  run_all.py
