[package]
name = "karu-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Karu policy engine"
license = "MIT"
repository = "https://github.com/wellknown-id/karu"

[[bin]]
name = "karu"
path = "src/main.rs"

[features]
default = ["cedar"]
cedar = ["karu/cedar"]

[dependencies]
karu = { path = "../karu", default-features = false, features = ["cedar", "dev"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
