[package]
name = "karu"
version = "0.1.0"
edition = "2021"
description = "An embeddable policy engine focusing on structural pattern matching over arbitrary JSON data"
license = "MIT"
repository = "https://github.com/wellknown-id/karu"
keywords = ["policy", "authorization", "pattern-matching", "access-control"]
categories = ["authentication"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["lsp", "cedar"]
cedar = []
ffi = ["dep:cbindgen"]
wasm = ["wasm-bindgen", "js-sys"]
parallel = ["rayon"]
lsp = ["tower-lsp", "tokio", "dev", "cedar"]
dev = ["dep:krust-sitter", "dep:krust-sitter-tool"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
rayon = { version = "1.10", optional = true }

# LSP dependencies (optional for WASM builds)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"], optional = true }

# Tree-sitter parser for dev tooling (LSP, diagnostics)
krust-sitter = { version = "0.5", optional = true }

[build-dependencies]
krust-sitter-tool = { version = "0.5", optional = true }
serde_json = "1.0"
cbindgen = { version = "0.27", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "evaluation"
harness = false

[[bench]]
name = "parser_compare"
harness = false
required-features = ["dev"]

[[bench]]
name = "lint_bench"
harness = false
required-features = ["dev"]
