[package]
name = "karu-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

[dependencies.karu]
path = ".."
features = ["cedar"]

# Parser fuzzing - tests error recovery
[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

# Lexer fuzzing - tests tokenization
[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false
bench = false

# Full compile pipeline fuzzing
[[bin]]
name = "fuzz_compile"
path = "fuzz_targets/fuzz_compile.rs"
test = false
doc = false
bench = false

# Transpiler fuzzing - tests Cedar output generation
[[bin]]
name = "fuzz_transpile"
path = "fuzz_targets/fuzz_transpile.rs"
test = false
doc = false
bench = false

# Cedar import pipeline fuzzing
[[bin]]
name = "fuzz_cedar_import"
path = "fuzz_targets/fuzz_cedar_import.rs"
test = false
doc = false
bench = false

# Evaluation with arbitrary JSON inputs
[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/fuzz_eval.rs"
test = false
doc = false
bench = false

# Cedar round-trip: Cedar → Karu → Cedar → Karu
[[bin]]
name = "fuzz_cedar_roundtrip"
path = "fuzz_targets/fuzz_cedar_roundtrip.rs"
test = false
doc = false
bench = false

# Semantic evaluation correctness (PathRef, deny-overrides, schema mode)
[[bin]]
name = "fuzz_eval_semantic"
path = "fuzz_targets/fuzz_eval_semantic.rs"
test = false
doc = false
bench = false

# Inline test parsing + execution
[[bin]]
name = "fuzz_inline_tests"
path = "fuzz_targets/fuzz_inline_tests.rs"
test = false
doc = false
bench = false
