[package]
name = "advanced-benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "scale"
harness = false

[workspace]

[dependencies]
# Karu native
karu = { path = "../.." }

# Cedar native
cedar-policy = "4"

# WASM runtime
wasmtime = "43.0.0"
wasmtime-wasi = "43.0.0"

# Benchmark framework
criterion = { version = "0.5", features = ["html_reports"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Deterministic RNG
rand = "0.8"

# Concurrent benchmarks
rayon = "1"

# Shared
serde_json = "1.0"
