[package]
name = "karu-wasm-harness"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
karu = { path = "../../..", default-features = false, features = ["ffi", "cedar"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
